@@ -1,0 +1,3 @@
+#setClass("track", slots = c(x="numeric", y="numeric"))
+
+some.object <- pi
